cmake_minimum_required(VERSION 3.8)
project(learning_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/RobotStatus.msg"
  "srv/SetPatrolPoints.srv"
  "action/Patrol.action"
  DEPENDENCIES geometry_msgs
)

ament_package()
